Add more configs

--- a/.config/mpv/script-opts/blacklist_extensions.conf
+++ b/.config/mpv/script-opts/blacklist_extensions.conf
@@ -1,10 +1,10 @@
 # only one of blacklist, whitelist should be defined at a time
 
 # only allow video and image formats
-whitelist=mkv,webm,png,jpg,mp4,avi,jpeg
+#whitelist=mkv,webm,png,jpg,mp4,avi,jpeg
 
 # alternatively, blacklist formats commonly found near videos
-#blacklist=srt,ass,mks,mka
+blacklist=srt,ass,mks,mka
 
 remove_files_without_extension=yes
 
