--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,6 +36,8 @@ exec-once=hyprpaper
 exec-once = copyq &
 exec-once = nm-applet &
 exec-once = hyprshade auto
+exec-once = /usr/lib/kdeconnectd &
+exec-once = kdeconnect-indicator &
 
 
 # Source a file (multi-file configs)
@@ -208,3 +210,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, Tab, bringactivetotop
+
+misc {
+# Variable refresh rate
+   vrr = 0
+}
