--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,7 @@
 preload = /home/okami/Pictures/current/botw.png
+preload = /home/okami/Pictures/current/windows11.jpg
 
-wallpaper = eDP-1, /home/okami/Pictures/current/botw.png
+wallpaper = eDP-1, /home/okami/Pictures/current/windows11.jpg
 
 # For battery life
-#ipc = off
+ipc = off
