--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,9 @@
   #pager = bat --force-colorization --theme='Monokai Extended Origin' 
   pager = delta
 
+[init]
+  defaultBranch = main
+
 [interactive]
     diffFilter = delta --color-only
 
@@ -15,3 +18,9 @@
     colorMoved = default
 [pull]
 	rebase = false
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
