--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,11 +33,13 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 exec-once = waybar &
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=hyprpaper
+#exec-once = mpvpaper -vp -o "loop" eDP-1 /home/okami/Pictures/animated_walls/Yor-Forger.png &
 exec-once = copyq &
 exec-once = nm-applet &
 exec-once = hyprshade auto
 exec-once = /usr/lib/kdeconnectd &
 exec-once = kdeconnect-indicator &
+exec-once = flameshot &
 
 
 # Source a file (multi-file configs)
@@ -139,7 +141,7 @@ device:epic-mouse-v1 {
 #
 ## Window rules
 # Disable animation for flameshot
-windowrulev2 = fullscreen,noanim,noblur,noshadow,nodim,noborder,nofocus,float,class:^(flameshot)$,title:^(flameshot)$
+windowrulev2 = noanim,nofocus,float,class:^(flameshot)$,title:^(flameshot)$
 windowrulev2 = fullscreen,noanim,noborder,class:^(archlinux-logout.py)$,title:^(ArchLinux Logout)$
 
 # Workspace specific rules
@@ -147,6 +149,13 @@ windowrulev2 = workspace 2, class:(firefox)
 windowrulev2 = workspace 3, class:([Cc]hromium), title:([Cc]hromium)
 windowrulev2 = workspace 9, class:(WebCord), title:(WebCord)
 windowrulev2 = workspace 10, class:(YouTube Music)
+
+# xwaylandvideobridge rules
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -168,7 +177,8 @@ bind = $mainMod, W, exec, firefox --private-window
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod SHIFT, RETURN, exec, kitty
 bind = $mainMod SHIFT, M, exec, pamixer --default-source -t
-bind = $mainMod SHIFT, A, exec, scshot.sh
+#bind = $mainMod SHIFT, A, exec, scshot.sh
+bind = $mainMod SHIFT, A, exec, flameshot gui
 bind = $mainMod, escape, exec, archlinux-logout
 
 # Move focus with mainMod + arrow keys
