--- a/.gitconfig
+++ b/.gitconfig
@@ -24,3 +24,13 @@
 [credential "https://gist.github.com"]
 	helper = 
 	helper = !/usr/bin/gh auth git-credential
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+[safe]
+	directory = /home/okami/Desktop/tests/sandbox/ebpf/bcc
+	directory = /home/okami/Desktop/tests/sandbox/ebpf/bcc/libbpf-tools/blazesym
+	directory = /home/okami/Desktop/tests/sandbox/ebpf/bcc/src/cc/libbpf
+	directory = /home/okami/Desktop/tests/sandbox/ebpf/bcc/libbpf-tools/bpftool
