--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,9 +1,10 @@
-#preload = /home/okami/Pictures/current/botw.png
+preload = /home/okami/Pictures/current/botw.png
 #preload = /home/okami/Pictures/current/windows11.jpg
 #preload = /home/okami/Pictures/current/berserk_guts_sleep_treetrunk.jpg
 preload = /home/okami/Pictures/current/guts_looking_moon.jpg
 
 wallpaper = eDP-1, /home/okami/Pictures/current/guts_looking_moon.jpg
+wallpaper = HDMI-A-1, /home/okami/Pictures/current/botw.png
 
 # For battery life
 ipc = off
